--- a/report/report.tex
+++ b/report/report.tex
@@ -109,6 +109,7 @@
         \subsection{The languages}
         \label{subsec:languages}
             The embedded Hardware Description Languages we decided to analyze are:
+
             \begin{description}
                 \item[Lava] The Lava\cite{lava1998} language, developed initially at Chalmers
                     University in Sweden.  Lava is deeply embedded in Haskell, and provides features
@@ -218,6 +219,7 @@
         necessary to implement a complete computer system.
 
         From the hardware design part of the book, we took our three circuits to be modeled:
+
         \begin{itemize}
             \item A simple Arithmetic Logic Unit (ALU), from here onwards referred to
                 as ``circuit 1''.
@@ -235,6 +237,7 @@
             function to compute is made by setting the ALU's 6 \emph{control bits}. To become more
             familiar with this circuit, let's first take a look at its block diagram, shown in
             figure \ref{fig:alu-block}
+
             \begin{figure}[h!]
                 \begin{center}
                     \includegraphics[width=0.55\textwidth]{imgs/alu-block.pdf}
@@ -247,6 +250,7 @@
             inputs or outputs to the ALU core. The bits \texttt{(zx, nx, zy, ny)} control
             ``pre-processing'' steps for the inputs \texttt{x} and \texttt{y}, with the following
             behaviour:
+
             \begin{description}
                 \item[zx and zy] \emph{Zeroes} the x input (respectively y). The ALU core will
                     receive \texttt{0} as input.
@@ -264,6 +268,7 @@
 
             Besides the main (16-bit wide) output of the ALU, there are two other output
             \emph{flags}, that indicate predicates over the main output:
+
             \begin{description}
                 \item[zr] Is high whenever $out = 0$.
                 \item[ng] Is high whenever $out < 0$.
@@ -289,6 +294,7 @@
 
             All the input and output ports of the circuit are pictured in its block diagram, shown
             in figure \ref{fig:ram-block}.
+
             \begin{figure}[h!]
                 \begin{center}
                     \includegraphics[width=0.5\textwidth]{imgs/ram-block.pdf}
@@ -324,6 +330,7 @@
             the Hack CPU expects to be connected to \emph{two} memory blocks, the instruction memory
             and the data memory. Having this in mind facilitates the understanding of the CPU's
             block diagram, shown in figure \ref{fig:cpu-block}
+
             \begin{figure}[h!]
                 \begin{center}
                     \includegraphics[width=0.9\textwidth]{imgs/cpu-block.pdf}
@@ -344,6 +351,7 @@
             look at the context in which the CPU is inserted, namely, the memory modules to which it
             is connected. So, let's analyze the CPU's ports by taking a look at figure
             \ref{fig:cpu-memory}.
+
             \begin{figure}[h!]
                 \begin{center}
                     \includegraphics[width=0.9\textwidth]{imgs/cpu-memory.pdf}
@@ -356,6 +364,7 @@
             circuits 1 and 2. We use the ALU, some registers, multiplexers, an instruction decoder
             and a counter (the \emph{program counter}). The diagram on figure \ref{fig:cpu-parts}
             shows these ``parts'' of the CPU circuit and how they are connected to each other.
+
             \begin{figure}[h!]
                 \begin{center}
                     \includegraphics[width=1.0\textwidth]{imgs/cpu-parts.pdf}
@@ -435,6 +444,7 @@
                 parts, which in turn used half adders. To get used to the wat in which
                 circuits are described in Lava, let us first take a look at the definition of the
                 hierarchy of adders in figure \ref{fig:lava-circuit1-model-adders}:
+
                 \begin{figure}[h!]
                     \begin{center}
                         \haskellfile{code/lava-circuit1-model-adders.hs}
@@ -445,6 +455,7 @@
 
                 Based on this small model we can already make some observations concerning the
                 aspects that we are analyzing. These observations are:
+
                 \begin{itemize}
                     \item All circuits in Lava must be modeled as \emph{uncurried} functions, that
                         is, if multiple inputs are needed, they need to be packed into one tuple, the
@@ -469,6 +480,7 @@
 
                 Now, after having defined all the necessary parts, lets take a look at the
                 ALU circuit itself in figure \ref{fig:lava-circuit1-model-alu}:
+
                 \begin{figure}[h!]
                     \begin{center}
                         \haskellfile{code/lava-circuit1-model-alu.hs}
@@ -503,6 +515,7 @@
                 even though \emph{actual} and \emph{expected} outputs might appear to be equal, they
                 are considered different by Lava. Here is the offending \texttt{Eq} instance from
                 the Lava library (module \texttt{Lava.Signal}):
+
                 \begin{haskellcode}
         instance Eq (Signal a) where
             Signal (Symbol r1) == Signal (Symbol r2) = r1 == r2
@@ -516,6 +529,7 @@
                 studied, let's take a look at how Lava handles \emph{formal verification} with two
                 examples: checking that a full adder is commutative and that the output of an
                 incrementer circuit is always different from its input:
+
                 \haskellfile{code/lava-circuit1-verify-fulladder.hs}
 
                 A property over a circuit in Lava is modeled as a circuit containing \emph{one
@@ -526,6 +540,7 @@
                 formula: the property being verified is \emph{valid} if and only if the negated
                 formula is unsatisfiable. The verification for the incrementer introduces another
                 detail of this kind of verification:
+
                 \haskellfile{code/lava-circuit1-verify-incrementer.hs}
 
                 We can see by the type of the verification function that it is a \emph{property
@@ -544,26 +559,28 @@
                 \emph{delayed} by one clock cycle, with the other parameter being the first value of
                 the output.  Using this fundamental circuit, we modeled the first building block of
                 our hierarchy of memory elements: a 1-bit register with input and load signals:
+
                 \haskellfile{code/lava-circuit2-model-reg.hs}
 
                 In this model, we use a \texttt{mux} to control whether the next state of the output
                 will be simply the previous state, or the input value will be ``loaded'' into the
                 register. Now, a 1-bit register can easily be ``lifted'' into a generic n-bit
                 circuit:
+
                 \haskellfile{code/lava-circuit2-model-regN.hs}
 
                 The \texttt{regN} definition is \emph{generic}, and parameterized by the size of the
                 input and output (\texttt{n}). This means that \emph{for each value of n, there is a
                     circuit \texttt{regN n}}. In Lava, however, we can only simulate and generate
                 VHDL for specific instances of this family of circuits. The restriction with regards
-                to VHDL generation is not conceptual, that because VHDL has good support for
-                \emph{generic components}, and one could imagine Lava generating generic VHDL from
-                generic circuit models. But, leaving that discussion aside, let's take a look at the
-                simulation case for \texttt{regN}:
+                to VHDL generation is not a theoretical limitation, that because VHDL has good
+                support for \emph{generic components}, and one could imagine Lava generating generic
+                VHDL from generic circuit models. But, leaving that discussion aside, let's take a
+                look at the simulation case for \texttt{regN}:
+
                 \haskellfile{code/lava-circuit2-simulation-regN.hs}
 
-                The \texttt{simulateSeq} function, which we already used to test the ALU (a
-                combinational circuit), is actually intended for the simulation of sequential
+                The \texttt{simulateSeq} function is intended for the simulation of sequential
                 circuits: the list of inputs its given is the sequence of values present at the
                 input ports of the circuit under test -- one element of the list for each clock
                 cycle. The list of outputs given by \texttt{simulateSeq} has a similar
@@ -573,6 +590,7 @@
                 some other helper components (such as an \emph{address decoder} and a 64-to-1
                 \emph{multiplexer}). With all the components at our disposal, we then modeled the
                 RAM block itself:
+
                 \haskellfile{code/lava-circuit2-model-ram64.hs}
 
                 All the registers in the memory bank are connected to the ``global'' input word for
@@ -588,6 +606,7 @@
                 is mostly combinational, as it contains \emph{no form of pipelining} and
                 exactly one instruction is executed per clock cycle. However, there is one
                 sequential component of the CPU: the \emph{program counter}:
+
                 \haskellfile{code/lava-circuit3-model-pc.hs}
 
                 The program counter counts cyclically between $ 0 $ and $ 2^{n-1} $, and can have
@@ -597,6 +616,7 @@
                     decoder}, responsible for interpreting each \texttt{Hack} instruction and
                 outputting several \emph{control bits} that are used to direct the data flow inside
                 the CPU during each instruction execution cycle:
+
                 \begin{figure}[h!]
                     \begin{center}
                         \haskellfile{code/lava-circuit3-model-instruction-decoder.hs}
@@ -630,9 +650,10 @@
 
             To better understand what characterizes the ForSyDe methodology, we first have to
             establish some vocabulary:
+
             \begin{description}
-                \item[System] In ForSyDe, a system or circuit is a network of processes
-                    interconnected by \emph{signals}.
+                \item[System] In ForSyDe, a system or circuit is a set of processes interconnected
+                    by \emph{signals}.
 
                 \item[Signal] A signal is, intuitively, a stream of information that flows between
                     processes. It carries events of some type, and each event has an associated
@@ -660,6 +681,7 @@
                 precise definition of signals depends on the \emph{model of computation} being
                 used. ForSyDe has (currently) process constructors for the following models of
                 computation:
+
                 \begin{description}
                     \item[Synchronous] All processes in this MoC have a global, implicit
                         \texttt{clock} input, and the tags in the signals are increasing natural
@@ -689,6 +711,7 @@
                 port and one integer output, and in which the value of the output is equal to the
                 input plus 4. The interface and internal architecture of this system
                 (\emph{addFour}) is depicted in figure \ref{fig:forsyde-addFour}.
+
                 \begin{figure}[h!]
                     \begin{center}
                         \includegraphics[width=1.0\textwidth]{imgs/forsyde-addFour.pdf}
@@ -733,6 +756,7 @@
                 provides the list of process constructors that a can be used to build systems in
                 ForSyDe's Synchronous Model of Computation (\ref{ref:forsyde-moc-synch}). The
                 functions provided in that module can be divided in 2 big groups:
+
                 \begin{description}
                     \item[Combinational] Combinations process constructors build processes in which
                         the value on a certain output at time $t$ depends \emph{only} on the input
@@ -765,14 +789,8 @@
                 \emph{interpretations}, such as simulation, generation of VHDL or generation of
                 graph diagrams. Let's take a look at how one could use the \texttt{mapSY}
                 constructor to model a simple incrementer process:
-                \begin{haskellcode}
-        incrFunc :: ProcFun (Int16 -> Int16)
-        incrFunc = \$(newProcFun [d| f :: Int16 -> Int16
-                                     f x = x + 1 |])
 
-        incrementer :: Signal Int16 -> Signal Int16
-        incrementer = mapSY "incrementerProc" incrFunc
-                \end{haskellcode}
+                \haskellfile{code/forsyde-synchprocs-incrementer.hs}
 
                 As already mentioned, ForSyDe makes heavy use of Template Haskell, and this example
                 already clarifies how. First of all, the ``innermost'' expression
@@ -859,6 +877,7 @@
 
                 Let's start our analysis by looking at the \emph{high-level} model for circuit 1,
                 the ALU:
+
                 \haskellfile{code/forsyde-circuit1-model-alusim.hs}
 
                 The first thing to notice is that the system is working over \emph{16-bit integers},
@@ -1057,6 +1076,7 @@
             say, in Haskell. Types in Coq can contain references to terms and vice-versa. A very
             typical example of these so-called \emph{dependent types} is the type(-family) of
             vectors with a certain length:
+
             \begin{coqcode}
         Inductive vec A : nat -> Type :=
             | nil  : vec A 0
@@ -1081,31 +1101,24 @@
                 \emph{well-formedness} is guaranteed by construction, i.e, every circuit built using
                 the constructors provided by Coquet are well-formed by definition. Let's take a look
                 at the \emph{Circuit} data type declaration:
+
                 \begin{figure}[h!]
                     \begin{center}
-                        \begin{coqcode}
-        Context {tech : Techno}
-        Inductive Circuit : Type -> Type -> Type :=
-        | Atom : forall {n m : Type} {Hfn : Fin n} {Hfm : Fin m}, techno n m -> Circuit n m
-        | Plug : forall {n m : Type} {Hfn : Fin n} {Hfm : Fin m} (f : m -> n), Circuit n m
-        | Ser : forall {n m p : Type}, Circuit n m -> Circuit m p -> Circuit n p
-        | Par : forall {n m p q : Type}, Circuit n p -> Circuit m q -> Circuit (n + m) (p + q)
-        | Loop : forall {n m p : Type}, Circuit (n + p) (n + p) -> Circuit n m
-                        \end{coqcode}
+                        \coqfile{code/coquet-definition-circuit.v}
                     \end{center}
-                    \caption{The Circuit (ℂ) datatype in Coquet
+                    \caption{The Circuit datatype in Coquet
                         \label{fig:coquet-circuit-type}}
                 \end{figure}
 
-                The \texttt{ℂ} type is parameterized by two types. These types are the \emph{input} and
-                \emph{output} types of the circuit, respectively. They \textbf{do not} represent
-                what is ``carried'' on the wires, but the \emph{structure} of the circuit's input
-                and output ports: How many of them there are, how are they grouped and how are they
-                named.
+                The \texttt{Circuit} type is parameterized by two types. These types are the
+                \emph{input} and \emph{output} types of the circuit, respectively. They \textbf{do
+                    not} represent what is ``carried'' on the wires, but the \emph{structure} of the
+                circuit's input and output ports: How many of them there are, how are they grouped
+                and how are they named.
 
-                There are 2 \emph{atomic} constructors from which an element of \texttt{ℂ} can be
-                built and 3 \emph{combinators}, which build a circuit based on other circuit(s). By
-                observing the serial and parallel composition combinators (\texttt{Ser} and
+                There are 2 \emph{atomic} constructors from which an element of \texttt{Circuit} can
+                be built and 3 \emph{combinators}, which build a circuit based on other circuit(s).
+                By observing the serial and parallel composition combinators (\texttt{Ser} and
                 \texttt{Par}, respectively), we notice that the input and output types match exactly
                 as expected.
 
@@ -1127,16 +1140,8 @@
                 As an ``usage example'' of Coquet, we show two simple circuits (\texttt{NOT} and
                 \texttt{HALFADD}), along with proofs that they implement the expected functions over
                 booleans. Let's start with \texttt{NOT}:
-                \begin{coqcode}
-        Definition NOT x nx : Circuit [:x] [:nx]  :=  Fork2 _ |> (NOR x x nx).
 
-        Instance NOT_Implement {x nx} : Implement (NOT x nx) _ _ negb.
-        Proof.
-            intros ins outs H.
-            unfold NOT in H.
-            tac.
-        Qed.
-                \end{coqcode}
+                \coqfile{code/coquet-spec-not.v}
 
                 The input type of \texttt{NOT} is a \emph{tagged unit} with tag \texttt{x},
                 similarly, the output type has tag \texttt{nx}. There is some \emph{notation}
@@ -1150,25 +1155,16 @@
                 details on exactly what is meant by ``implements'', as well as the workings of plugs
                 and tags, are exposed further ahead. Now let's take a look at a half-adder
                 described in Coquet:
-                \begin{coqcode}
-        Definition HADD a b s c : Circuit ([:a] + [:b]) ([:s] + [:c]) :=
-            Fork2 ([:a] + [:b]) |> (XOR a b s & AND a b c).
 
-        Instance HADD_Implement {a b s c} :
-            Implement (HADD a b s c) _ _
-            (fun (x : bool * bool) => match x with (a,b) => (xorb a b, andb a b) end).
-            Proof.
-                unfold HADD;  intros ins outs H;  tac.
-            Qed.
-                \end{coqcode}
+                \coqfile{code/coquet-spec-halfadder.v}
 
-                First of, the sum types that are given as parameters to \texttt{ℂ} indicate that we
-                have two input ports and two output ports. By using \texttt{Fork2} on a binary sum
-                (\texttt{[:a] + [:b]}), we create as output a sum type in which each of the
-                components is in itself a sum: that matches exactly the interface of the component
-                after the \texttt{|>} operator. On the right side of the serial composition, we have
-                a parallel composition of \texttt{XOR} and \texttt{AND}, giving two outputs:
-                respectively the sum (\texttt{[:s]}) and carry-out (\texttt{[:c]}) 
+                First of, the sum types that are given as parameters to \texttt{Circuit} indicate
+                that we have two input ports and two output ports. By using \texttt{Fork2} on a
+                binary sum (\texttt{[:a] + [:b]}), we create as output a sum type in which each of
+                the components is in itself a sum: that matches exactly the interface of the
+                component after the \texttt{|>} operator. On the right side of the serial
+                composition, we have a parallel composition of \texttt{XOR} and \texttt{AND}, giving
+                two outputs: respectively the sum (\texttt{[:s]}) and carry-out (\texttt{[:c]}) 
 
                 Together with the definition, we prove that the \texttt{HADD} circuit implements the
                 boolean function we would expect, and the proof is similar to the case of
@@ -1179,16 +1175,16 @@
                 and not some boolean equivalent.
 
                 As a last detail on the ``user interface'' of Coquet, there is the definition of
-                what exactly are the input and output types (a circuit of type \texttt{ℂ n m} has
-                input type \texttt{n} and output type \texttt{m}). Usually, in the Coquet
+                what exactly are the input and output types (a circuit of type \texttt{Circuit n m}
+                has input type \texttt{n} and output type \texttt{m}). Usually, in the Coquet
                 paper\cite{coquet2011} and in the examples provided with the library, input and
                 output types are \emph{sum types} in which the terms of the sum are \emph{tagged
                     units}. Using tags serves a form of ``documentation'', giving someone reading
                 the circuit model an idea of what role does each input/output port play. The
                 \emph{type family} of tagged unit types is defined as follows:
+
                 \begin{coqcode}
         Inductive tag (t : string) : Type := _tag : tag t
-
         Notation "[: x ]" := (tag x).
         Notation "[! x ]" := (_tag x).
         Notation "[!!]"   := (_tag _).
@@ -1200,6 +1196,7 @@
                 \texttt{sumn} which, given a type \texttt{t} and a natural \texttt{n}, returns a
                 sum type with \texttt{n} elements and in which each element has type \texttt{t}.
                 This might be useful if we are defining a n-bit adder:
+
                 \begin{coqcode}
         Definition RIPPLE cin a b cout s n :
             Circuit  ([:cin] + sumn [:a] n + sumn [:b] n)  (sumn [:s] n + [:cout]) := ...
@@ -1232,40 +1229,16 @@
                 relation for a circuit relates its inputs to outputs, and is defined by induction on
                 circuit structure.
 
-                For a circuit type \texttt{ℂ n m} and considering \texttt{T} as the type of what is
-                carried in the wires, we can define the type \emph{ins} (stands for ``inputs'') as
-                $n \rightarrow T$ and \emph{outs} as $m \rightarrow T$. These are functions that,
-                for each input/output port, provide the a value present at that port -- they are in
-                this way \emph{isomorphic} to cartesian products, and this isomorphism is indeed
-                used to facilitate proofs of correctness in Coquet.
+                For a circuit type \texttt{Circuit n m} and considering \texttt{𝕋} as the type of
+                what is carried in the wires, we can define the type \emph{ins} (stands for
+                ``inputs'') as $n \rightarrow 𝕋$ and \emph{outs} as $m \rightarrow 𝕋$. These are
+                functions that, for each input/output port, provide the a value present at that port
+                -- they are in this way \emph{isomorphic} to cartesian products, and this isomorphism
+                is indeed used to facilitate proofs of correctness in Coquet, as will be seen later.
 
                 The definition of the meaning relation is as follows:
 
-                \begin{coqcode}
-        Inductive Semantics : forall {n} {m},
-        circuit n m -> (n -> Data) -> (m -> Data) -> Prop :=
-
-        | KAtom : forall n m {Hfn : Fin n} {Hfm : Fin m}
-                      (t : techno n m) ins outs,
-                          spec t ins outs -> Semantics (Atom t) ins outs
-
-        | KSer : forall n m p (x : circuit n m) (y : circuit m p) ins middles outs,
-                            Semantics x ins middles
-                         -> Semantics y middles outs
-                         -> Semantics (Ser x y) ins outs
-
-        | KPar : forall n m p q (x : circuit n p) (y : circuit m q) ins outs,
-                        Semantics x (select_left ins) (select_left outs)
-                     -> Semantics y (select_right ins) (select_right outs)
-                     -> Semantics (Par x y) ins outs
-
-        | KPlug : forall n m {Hfn : Fin n} {Hfm : Fin m} (f : m -> n) ins,
-                      Semantics (Plug f) ins (Data.lift f ins)
-
-        | KLoop : forall n m l (x : circuit (n + l) (m + l)) ins outs retro,
-                         Semantics x (Data.app ins retro) (Data.app outs retro)
-                      -> Semantics (Loop x) ins outs
-                \end{coqcode}
+                \coqfile{code/coquet-definition-semantics.v}
 
                 We can notice that the definition of \texttt{Semantics} has constructors that
                 correspond to the constructors of \texttt{Circuit}. So, for example, given the
@@ -1293,16 +1266,16 @@
                 the designer two kinds of abstraction to facilitate writing high-level
                 specifications:
 
-                \begin{description}
-                    \item[Data abstraction] The meaning relation (\texttt{Semantics}) for a circuit
-                        is a relation between two \emph{functions} (\emph{ins} and \emph{outs}),
-                        which is cumbersome to reason about. Therefore, Coquet allows the user to
-                        express the specification for a circuit in terms of higher-level types,
-                        provided that isomorphisms between these higher-level types and the function
-                        types are provided. Several isomorphisms for common cases of input/output
-                        types are already provided in the Coquet library, such as the isomorphism
-                        between $ \text{sumn} \text{\textbf{1}} n \rightarrow B$ and $ B^{n} $
-                        (where \textbf{1} stands for the unit type and \texttt{B} for boolean).
+                \begin{description} \item[Data abstraction] The meaning relation
+                        (\texttt{Semantics}) for a circuit is a relation between two
+                        \emph{functions} (\emph{ins} and \emph{outs}), which is cumbersome to reason
+                        about. Therefore, Coquet allows the user to express the specification for a
+                        circuit in terms of higher-level types, provided that isomorphisms between
+                        these higher-level types and the function types are provided. Several
+                        isomorphisms for common cases of input/output types are already provided in
+                        the Coquet library, such as the isomorphism between ($ \text{sumn} \:
+                        \text{\textbf{1}} \: n \rightarrow 𝔹$) and ($ 𝔹^{n} $), where \textbf{1}
+                    stands for the unit type and \texttt{𝔹} for boolean).
 
                     \item[Behavioural abstraction] A circuit can be said to satisfy a weak
                         specification 
@@ -1320,15 +1293,7 @@
                 also write non-deterministic specifications. The definitions for the classes
                 \texttt{Realise} and \texttt{Implement} are as follows:
 
-                \begin{coqcode}
-        Context {n m N M : Type} (Rn : Iso (n -> T) N) (Rm : Iso (m -> T) M).
-        Class Realise (c : Circuit n m) (R : N -> M -> Prop) :=
-            realise :
-                forall ins outs, Semantics c ins outs -> R (iso ins) (iso outs)
-        Class Implement (c : Circuit n m) (f : N -> M) :=
-            implement :
-                forall ins outs, Semantics c ins outs -> iso outs = f (iso ins)
-                    \end{coqcode}
+                \coqfile{code/coquet-definition-realise-implement.v}
 
                 Is we want to prove that a certain circuit \texttt{c} \emph{implements} a certain
                 function \emph{f} (the high-level specification), then our goal in Coq will be:
@@ -1365,9 +1330,11 @@
                 Another interesting point is that Coquet defines a \texttt{stream} type family, and
                 then proceeds to define several interesting function over \texttt{stream}, as well
                 as an instance for the meaning relation. The type family is defined as follows:
+
                 \begin{coqcode}
         Definition stream A := nat -> A.
                 \end{coqcode}
+
                 If instead of using \texttt{nat} in the above definition, we generalized it a bit
                 more (abstracting a new type parameter), we arrive at the concept of an ``event
                 stream'':
